<resources>
    <string name="app_name">Wagen - Lavados de Auto a Domicilio</string>
    <!--<string name="default_web_client_id" translatable="false">225663519311-7offsnhnv29hieuoufoskas411bebuiv.apps.googleusercontent.com</string>-->
   <!-- <string name="default_web_client_id" translatable="false">910163104621-jo00l2rc7ckohrkktc4omb4qilt2fk8v.apps.googleusercontent.com</string>-->
    <string name="facebook_app_id">388983028957900</string>
    <string name="fb_login_protocol_scheme">fb3487337748040586</string>

    <!--<string name="somethingwentwrong">Something went wrong</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="photo_upload_is_failed">Photo upload failed</string>
    <string name="enter_firstname">Please enter first name</string>
    <string name="enter_lastname">Please enter last name</string>
    <string name="enterconfirmpass">Please enter confirm password</string>
    <string name="entercorrectpass">Please enter correct confirm password</string>
    <string name="enter_email">Please enter email</string>
    <string name="enter_code">Please enter verify code</string>
    <string name="enter_corret_code">Please enter correct verify code</string>
    <string name="enter_password">Please enter password</string>
    <string name="enter_verifycode">Please enter verification code</string>
    <string name="enter_verifycorrectcode">Please enter correct verification code</string>
    <string name="signuptitle">SignUp</string>
    <string name="forgottitle">Forgot Password</string>
    <string name="backtologin">Volver al ingreso</string>
    <string name="hometitle">Home</string>
    <string name="editproifle">Edit Profile</string>
    <string name="aboutcompay">About Company</string>
    <string name="order1title">Select Car Type</string>
    <string name="bookingsumary">Resumen de Reserva</string>
    <string name="processingpayment">Processing Payment</string>
    <string name="verifycode">Verify Code</string>
    <string name="settings">Settings</string>
    <string name="noavailabletime">There is no avaialble time for this date</string>
    <string name="selectatime">Please select a time</string>
    <string name="sentreview">Thanks for your review, it help us to improve every day!</string>
    <string name="back">Back</string>
    <string name="entercorrectcouponcode">Please enter correct coupon code</string>
    <string name="pendingrevieworders">Pending Review Orders</string>
    <string name="givereview">Give Review</string>
    <string name="membership">Membresía</string>
    <string name="purchasenow">Purchase Now</string>
    <string name="inputaddress">Ingresar Dirección</string>
    <string name="inputphonenumber">Enter Phone Number</string>
    <string name="next">Siguiente</string>
    <string name="save">Save</string>
    <string name="placeorder">place order</string>
    <string name="quantity">Quantity</string>
    <string name="selectmethod">Select Payment Type</string>
    <string name="bymembership">By Membresía</string>
    <string name="paynow">Pay Now</string>
    <string name="noorderitem">You haven not any order to give review</string>
    <string name="enterphone">Please enter Phone number</string>
    <string name="sendverifycode">Send Verification Code</string>
    <string name="confirm">Confirm</string>
    <string name="cannotselectolddate">You can not select old date</string>
    <string name="thanksfororder">thanks for your appointment and prefer us</string>
    <string name="profilechagned">the changes in your profile were made</string>

    <string name="selectcar">Please select a car</string>
    <string name="selectpackage">Please select a Package</string>
    <string name="yourappointmentdate">Fecha de Reserva</string>
    <string name="yourappointmenttime">Your Appointment Time</string>
    <string name="appointdate">Appointment Date : </string>
    <string name="apointtime">Appointment Time : </string>
    <string name="duration">Duración</string>
    <string name="totalprice">Precio Total</string>
    <string name="viewreview">Evaluar</string>
    <string name="purchasemembership">Plan mensual</string>
    <string name="termsandcondition">Terms &amp; Conditions</string>
    <string name="privacypolicy">Privacy Policy</string>
    <string name="aboutus">About Us</string>
    <string name="logout">LOG OUT</string>
    <string name="price">Price : </string>
    <string name="purchasedat">Purchased At : </string>
    <string name="orderavailable">Order Avaialble : </string>
    <string name="shopaddressis">Select Workshop Address</string>
    <string name="enteryouraddress">Input Address</string>
    <string name="paymentsuccess">Payment success</string>
    <string name="paymentfailed">Payment failed</string>

    <string name="passupdatesuccess">Password updated successfully, please try login</string>
    <string name="purchasesuccess">Membresía purchased successfully</string>
    &lt;!&ndash; TODO: Remove or change this placeholder text &ndash;&gt;
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <array name="steps">
        <item>Paso 1</item>
        <item>Paso 2</item>
        <item>Paso 3</item>
        <item>Paso 4</item>
    </array>
    <array name="steptitles">
        <item>Select Vehicle Type</item>
        <item>Packs de Servicios</item>
        <item>Servicios adicionales</item>
        <item>Fecha y Hora</item>
    </array>-->


    <string name="somethingwentwrong">Algo salió mal</string>
    <string name="take_photo">Toma un Foto</string>
    <string name="choose_from_gallery">Elegir desde la Galería</string>
    <string name="cancel">Cancelar</string>
    <string name="photo_upload_is_failed">Foto cargada con error</string>
    <string name="enter_firstname">Por favor ingresa tu nombre</string>
    <string name="enter_lastname">Por favor ingresa tu apellido</string>
    <string name="enterconfirmpass">Por favor confirma tu contraseña</string>
    <string name="entercorrectpass">Por favor ingresa la contraseña correcta</string>
    <string name="enter_email">Por favor ingresa tu correo</string>
    <string name="enter_code">Por favor ingresa tu código de verificación</string>
    <string name="enter_corret_code">Por favor ingresa el código de verificación correcto</string>
    <string name="enter_password">Por favor ingresa tu contraseña</string>
    <string name="enter_verifycode">Por favor ingresa el código de verificación</string>
    <string name="enter_verifycorrectcode">Por favor ingresa el código de verificación correcto</string>
    <string name="signuptitle">Ingresar</string>
    <string name="forgottitle">Olvidé mi contraseña</string>
    <string name="backtologin">Volver al inicio</string>
    <string name="hometitle">Inicio</string>
    <string name="editproifle">Editar Perfil</string>
    <string name="aboutcompay">Acerca de nosotros</string>
    <string name="order1title">Selecciona un Tipo de Vehículo</string>
    <string name="bookingsumary">Resumen de Reserva</string>
    <string name="processingpayment">Procesando el Pago</string>
    <string name="verifycode">Código de Verificación</string>
    <string name="settings">Configuración</string>
    <string name="noavailabletime">No hay horario disponible en este día</string>
    <string name="selectatime">Por favor selecciona una hora</string>
    <string name="sentreview">Gracias por tu evaluación, esto nos ayuda a mejorar cada día!</string>
    <string name="back">Regresar</string>
    <string name="entercorrectcouponcode">Por favor ingresa el cupón de descuento</string>
    <string name="pendingrevieworders">Lavados pendientes de revisión</string>
    <string name="givereview">Evaluar</string>
    <string name="membership">Membresía</string>
    <string name="purchasenow">Compra Ahora</string>
    <string name="inputaddress">Ingresar Dirección</string>
    <string name="inputphonenumber">Ingresar Celular</string>
    <string name="next">Siguiente</string>
    <string name="save">Guardar</string>
    <string name="placeorder">Confirmar Lavado</string>
    <string name="quantity">Cantidad</string>
    <string name="selectmethod">Seleccionar Método de Pago</string>
    <string name="bymembership">Con mi membresía</string>
    <string name="paynow">Pagar Ahora</string>
    <string name="noorderitem">No tienes otros lavados por revisar</string>
    <string name="enterphone">Por favor ingresa tu celular</string>
    <string name="sendverifycode">Enviar Código de Verificación</string>
    <string name="confirm">Confirmar</string>
    <string name="cannotselectolddate">No puedes seleccionar una fecha anterior a la actual</string>
    <!--<string name="thanksfororder">Gracias por tu reserva y confiar en nosotros</string>-->
    <string name="thanksfororder">Gracias por confiar en Wagen. Preparate para el mejor lavado!</string>
    <string name="profilechagned">Los cambios en tu perfil fueron realizados</string>

    <string name="selectcar">Por favor selecciona un auto</string>
    <string name="selectpackage">Por favor selecciona un Servicio</string>
    <string name="yourappointmentdate">Fecha de Reserva</string>
    <string name="yourappointmenttime">Hora de tu Reserva</string>
    <string name="appointdate">Fecha de Reserva : </string>
    <string name="apointtime">Hora de Reserva : </string>
    <string name="duration">Duración</string>
    <string name="totalprice">Precio Total</string>
    <string name="viewreview">Evaluar</string>
    <string name="purchasemembership">Plan mensual</string>
    <string name="termsandcondition">Términos y Condiciones</string>
    <string name="privacypolicy">Política de Privacidad</string>
    <string name="aboutus">Nuestro Servicio</string>
    <string name="logout">Salir</string>
    <string name="price">Precio : </string>
    <string name="purchasedat">Pagado : </string>
    <string name="orderavailable">Reserva Disponible : </string>
    <string name="shopaddressis">Seleccionar un Lugar de Lavado</string>
    <string name="enteryouraddress">Ingresar Dirección</string>
    <string name="paymentsuccess">Pago Exitoso</string>
    <string name="paymentfailed">Pago Fallido</string>
    <string name="cannotgetaddress">We are unable to get your email address.</string>

    <string name="passupdatesuccess">Contraseña actualizada exitosamente, por favor ingresa a tu cuenta</string>
    <string name="purchasesuccess">Membresía adquirida exitosamente</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hola, el espacio está en blanco</string>
    <array name="Pasos">
        <item>Paso 1</item>
        <item>Paso 2</item>
        <item>Paso 3</item>
        <item>Paso 4</item>
    </array>
    <array name="steptitles">
        <item>Seleccione el Tipo de Vehículo</item>
        <item>Packs de Servicios</item>
        <item>Servicios adicionales</item>
        <item>Fecha y Hora</item>
    </array>

    <string-array name="steps">
        <item>Inicio</item>
        <item>Tipo de lavado</item>
        <item>Adicionales</item>
        <item>Fecha y hora</item>
    </string-array>


</resources>