<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/lyt_bottomsheet"
    android:orientation="vertical"
    android:background="@drawable/aler_stroke_rect"
    app:behavior_hideable="true"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_gravity="center"
    app:layout_constrainedHeight="true"
    android:padding="10dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:text="@string/selectmethod"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginBottom="10dp"
        android:id="@+id/txv_title"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/bymembership"
        android:gravity="center"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:id="@+id/bymembership"
        android:background="@drawable/loginbuttonback"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="20dp"
        android:text="@string/paynow"
        android:gravity="center"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:id="@+id/paynow"
        android:background="@drawable/loginbuttonback"/>

</LinearLayout>