<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/edittextback">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/appointdate"
                android:textSize="18dp"
                android:textColor="@color/gray_color"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/appointdate"
                android:layout_marginLeft="10dp"
                android:id="@+id/txv_date"
                android:textSize="18dp"
                android:textColor="@color/gray_color"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apointtime"
                android:textSize="18dp"
                android:textColor="@color/gray_color"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/appointdate"
                android:layout_marginLeft="10dp"
                android:id="@+id/txv_time"
                android:textSize="18dp"
                android:textColor="@color/gray_color"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duration"
                android:textSize="18dp"
                android:textColor="@color/gray_color"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/appointdate"
                android:layout_marginLeft="10dp"
                android:textSize="18dp"
                android:id="@+id/txv_duration"
                android:textColor="@color/gray_color"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/totalprice"
                android:textSize="18dp"
                android:textColor="@color/gray_color"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/appointdate"
                android:layout_marginLeft="10dp"
                android:id="@+id/txv_price"
                android:textSize="18dp"
                android:textColor="@color/gray_color"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>