<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittextback">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Schedule for 4 per month"
            android:textSize="20dp"
            android:gravity="center"
            android:id="@+id/txv_title"
            android:textColor="@color/gray_color"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textSize="20dp"
                android:textColor="@color/gray_color"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="25USD"
                android:layout_marginLeft="10dp"
                android:id="@+id/txv_price"
                android:textSize="20dp"
                android:textColor="@color/gray_color"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/lyt_purchasedetail">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/purchasedat"
                    android:textSize="18dp"
                    android:textColor="@color/gray_color"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2020-10-18"
                    android:layout_marginLeft="10dp"
                    android:textSize="18dp"
                    android:id="@+id/txv_purchasedate"
                    android:textColor="@color/gray_color"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/orderavailable"
                    android:textSize="18dp"
                    android:textColor="@color/gray_color"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="4"
                    android:layout_marginLeft="10dp"
                    android:textSize="18dp"
                    android:id="@+id/txv_availableorder"
                    android:textColor="@color/gray_color"/>
            </LinearLayout>
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/purchasenow"
            android:id="@+id/txv_purcahsenow"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:drawableTint="@color/gray_color"
            android:background="@drawable/loginbuttonback1"/>

    </LinearLayout>

</LinearLayout>